Fixed text align on banner text and header text

--- a/app/assets/stylesheets/discover/discover.scss
+++ b/app/assets/stylesheets/discover/discover.scss
@@ -15,6 +15,7 @@
       font-size: 48px;
       color: white;
       text-shadow: 1px 1px 10px black;
+      text-align: center;
     }
   }
 
@@ -27,6 +28,7 @@
     p {
       font-size: 20px;
       color: #525558;
+      text-align: center;
     }
   }
 }
